components/blinko/base/blinko-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  labels:
    io.kompose.service: blinko-website
  name: blinko-website
  namespace: blinko
spec:
  replicas: 0
  selector:
    matchLabels:
      io.kompose.service: blinko-website
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: blinko-website
    spec:
      containers:
        - env:
            - name: DATABASE_URL
              valueFrom:
                secretKeyRef:
                  name: blinko-website
                  key: DATABASE_URL
            - name: NEXTAUTH_SECRET
              valueFrom:
                secretKeyRef:
                  name: blinko-website
                  key: NEXTAUTH_SECRET
            - name: NEXT_PUBLIC_BASE_URL
              value: http://blinko.apps.morgurth.com
            - name: NODE_ENV
              value: production
          image: blinkospace/blinko:latest
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - http://localhost:1111/
            failureThreshold: 5
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 10
          name: blinko-website
          ports:
            - containerPort: 1111
              protocol: TCP
          volumeMounts:
            - mountPath: /app/.blinko
              name: blinko-website-claim0
      restartPolicy: Always
      volumes:
        - name: blinko-website-claim0
          persistentVolumeClaim:
            claimName: blinko-website-claim0
