components/blinko/base/ollama-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  labels:
    io.kompose.service: ollama
  name: ollama
  namespace: blinko
spec:
  replicas: 0
  selector:
    matchLabels:
      io.kompose.service: ollama
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: ollama
    spec:
      containers:
        - image: ollama/ollama:latest
          name: ollama
          volumeMounts:
            - mountPath: /
              name: ollama-claim0
              subPath: .ollama
          ports:
            - containerPort: 11434
              protocol: TCP
              name: http
      restartPolicy: Always
      volumes:
        - name: ollama-claim0
          persistentVolumeClaim:
            claimName: ollama-claim0
