components/blinko/base/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    io.kompose.service: postgres
  name: postgres
  namespace: blinko
spec:
  replicas: 0
  selector:
    matchLabels:
      io.kompose.service: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: postgres
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: postgres
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: blinko-website
                  key: POSTGRES_PASSWORD
            - name: POSTGRES_USER
              value: postgres
            - name: TZ
              value: America/New_York
            - name: PGDATA
              value: /var/lib/postgresql/data/pgdata
          image: postgres:14
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - postgres
                - -d
                - postgres
            failureThreshold: 5
            periodSeconds: 5
            timeoutSeconds: 10
          name: blinko-postgres
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-claim0
              subPath: pgdata
      restartPolicy: Always
      volumes:
        - name: postgres-claim0
          persistentVolumeClaim:
            claimName: postgres-claim0
