components/blinko/base/ollama-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "3"
  labels:
    io.kompose.service: ollama 
  name: ollama
  namespace: blinko
spec:
  ports:
    - name: "blinko"
      port: 11434
      targetPort: 11434
  selector:
    io.kompose.service: ollama
