components/blinko/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  labels:
    io.kompose.service: postgres
  name: postgres
spec:
  ports:
    - name: "5435"
      port: 5435
      targetPort: 5432
  selector:
    io.kompose.service: postgres
